<resources>
    <string name="app_name">Arti-Sun</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Favorite">Orders</string>
    <string name="Cart">Cart</string>

    <string name="Order">Manage Order</string>
    <string name="Product">Manage Product</string>
    <string name="Review">View Review</string>
    <string name="Income">View Income</string>

    <string name="Setting">Setting</string>

    <string name="Login">Login</string>
    <string name="Recover">Recover \nPassword</string>
    <string name="Recover1">Recover</string>
    <string name="Back">Back</string>
    <string name="Registeruseracc"><u>Register a User Account</u></string>
    <string name="Registerselleracc"><u>Register a Seller Account</u></string>
    <string name="forgotpassword"><u>Forgot Password</u></string>
    <string name="Register">Register</string>
    <string name="UserR">User Register</string>
    <string name="SellerR">Seller Register</string>

    <string name="Logout">Logout</string>
    <string name="PInfo">Edit Personal Information</string>
    <string name="ChangeP">Change Password</string>
    <string name="Update">Update Information</string>
    <string name="Status">Shop Opening       </string>
    <string name="Add">Add Product</string>
    <string name="name">username</string>
    <string name="Welcome">Welcome,   </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email"><font size="18">Email:</font></string>
    <string name="Address"><font size="18">Address:</font></string>
    <string name="Name"><font size="18">User Name:</font></string>
    <string name="Password1"><font size="18">Password:</font></string>
    <string name="Password2"><font size="18">Confirm Password:</font></string>
    <string name="Phone"><font size="18">Contact Number:</font></string>
    <string name="Phone2"><font size="18">Contact\nNumber:</font></string>
    <string name="ShopName"><font size="18">Shop Name:</font></string>


    <string name="passwordhint2"><font size="12">Confirm Password </font></string>
    <string name="namehint"><font size="12">User Name </font></string>
    <string name="passwordhint"><font size="12">Password</font></string>
    <string name="emailhint"><font size="12">Emaill Address</font></string>
    <string name="pnhint"><font size="12">Phone Number</font></string>
    <string name="shophint"><font size="12">Shop Name</font></string>
    <string name="locationhint"><font size="12">Home Address</font></string>

</resources>